1_wt_histone_h2b1.ipynb

--- a/1_wt_histone_h2b1.ipynb
+++ b/1_wt_histone_h2b1.ipynb
@@ -272,13 +272,13 @@
     }
    ],
    "source": [
-    "### MSM ###\n",
-    "msm_lag = 2\n",
+    "#MSM \n",
+    "msm_lag = 5\n",
     "\n",
     "msm = pyemma.msm.estimate_markov_model(cluster.dtrajs, msm_lag)\n",
     "\n",
     "# SAVE\n",
-    "# only time it is ok to use pyemma's save function\n",
+    ,
     "msm_save_name = 'msm'\n",
     "if SAVE:\n",
     "    msm.save(f'msm.h5',  overwrite=True)\n",
